lintian (2.4.4) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - build-depends-on-specific-java-doc-package
      - depends-on-specific-java-doc-package
      - unneeded-build-dep-on-quilt
      - description-synopsis-starts-with-article
      - needless-dependency-on-jre
      - temporary-debhelper-file

  * checks/*:
    + [NT] Use the new pre-sorted file {index,info} when iterating over files.
  * checks/binaries:
    + [RA] Exclude kfreebsd-kernel-di-{amd64,i386} from the
      embedded-zlib check since it's in the kernel.  (Closes: #593397)
    + [RG] Add swipl to the list of known interpreters.  (Closes: #591316)
  * checks/cruft{,.desc}:
    + [NT] Extended the diff-contains-substvars check to also catch files
      prefixed with a package name.
    + [NT] Corrected the description of diff-contains-$vcs-control-dir.
      It incorrectly assumed that -i worked for native packages.
      (Closes: #609153)
  * checks/debhelper{,.desc}:
    + [NT] Fix dependency check for dh_nativejava, default-jdk has never
      provided dh_nativejava.  (Closes: #606506)
    + [NT] Added check for temporary debhelper files that ought to have
      been removed by dh_clean.  (Closes: #598251)
  * checks/debian-source-dir:
    + [NT] Added missing import of "Util" perl module.  Thanks to David
      Bremner for the patch.
  * checks/description{,.desc}:
    + [NT] Add a check for synopsis starting with articles.  Thanks to
      Nelson A. de Oliveira for the patch.  (Closes: #603053)
  * checks/fields{,.desc}:
    + [NT] Added check for packages (build) depending on openjdk-X-doc or
      classpath-doc instead of the default-jdk-doc metapackage.
      (Closes: #593837)
    + [NT] Fixed spelling of metapackage in tag descriptions.
    + [NT] Added needless-dependency-on-jre tag.
    + [NT] Corrected Policy references for the uploader tags.  Thanks to
      David Prévot for spotting this issue and providing a patch.
      (Closes: #602632)