@@ -411,6 +411,13 @@ foreach my $file (@{$info->sorted_index}) {
 				windows)(?:\.txt)?(?:\.gz)?$,xi){
 		    tag "package-contains-readme-for-other-platform-or-distro", "$file";
 		}
+
+		# contains a compressed version of objects.inv in sphinx-generated documentation?
+		if ($file =~ m,^usr/share/doc/$tmp/([^/]+/)+objects\.inv\.gz$,
+		    and $info->file_info->{$file} =~ m/gzip compressed/) {
+		    tag "compressed-objects.inv", "$file";
+		}
+
 	    }
 	}
 	# ---------------- /usr/doc
