@@ -1,0 +1,1 @@
+objects.inv usr/share/doc/python-kinterbasdb/docs/
